--- a/laravel/canvas-blog/package.json
+++ b/laravel/canvas-blog/package.json
@@ -10,18 +10,25 @@
         "production": "mix --production"
     },
     "devDependencies": {
-        "axios": "^0.21",
-        "bootstrap": "^4.0.0",
-        "jquery": "^3.2",
+        "axios": "^0.21.1",
+        "bootstrap": "^4.6.0",
+        "highlight.js": "^10.5.0",
+        "jquery": "^3.5.1",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "popper.js": "^1.12",
+        "medium-zoom": "^1.0.6",
+        "moment": "^2.29.1",
+        "nprogress": "^0.2.0",
+        "popper.js": "^1.16.1",
         "postcss": "^8.1.14",
-        "resolve-url-loader": "^2.3.1",
-        "sass": "^1.20.1",
-        "sass-loader": "^8.0.0",
-        "vue": "^2.5.17",
-        "vue-loader": "^15.9.6",
-        "vue-template-compiler": "^2.6.10"
+        "resolve-url-loader": "^3.1.2",
+        "sass": "^1.32.4",
+        "sass-loader": "^10.1.1",
+        "vue": "^2.6.12",
+        "vue-infinite-loading": "^2.4.5",
+        "vue-loader": "^15.9.5",
+        "vue-meta": "^2.4.0",
+        "vue-router": "^3.4.9",
+        "vue-template-compiler": "^2.6.12"
     }
 }
