--- a/vue_js/jpub_vue_js/.prettierrc
+++ b/vue_js/jpub_vue_js/.prettierrc
@@ -2,7 +2,8 @@
   "useTabs": false,
   "printWidth": 80,
   "tabWidth": 2,
-  "trailingComma": "all",
+  "trailingComma": "none",
   "semi": true,
-  "singleQuote": true
+  "singleQuote": true,
+  "bracketSpacing": true
 }
