--- a/react/doit_react/doit-react/doit-react-example/package.json
+++ b/react/doit_react/doit-react/doit-react-example/package.json
@@ -3,22 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@babel/core": "^7.14.6",
-    "@babel/plugin-syntax-object-rest-spread": "^7.8.3",
-    "@storybook/addon-actions": "^6.2.9",
-    "@storybook/addons": "^6.2.9",
-    "@storybook/react": "^6.2.9",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "aphrodite": "^2.4.0",
     "axios": "^0.21.1",
-    "babel-loader": "^8.2.2",
     "enzyme": "^3.11.0",
-    "json-server": "^0.16.3",
     "moment": "^2.29.1",
     "next": "^11.0.0",
-    "node-sass": "4.14",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
@@ -26,19 +17,16 @@
     "react-scripts": "4.0.3",
     "react-test-renderer": "^17.0.2",
     "react-with-styles": "^5.0.0",
-    "react-with-styles-interface-aphrodite": "^6.0.1",
     "recompose": "^0.30.0",
     "redux": "^4.1.0",
-    "redux-devtools-extension": "^2.13.9",
     "redux-pack": "^0.1.5",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
-    "sass-loader": "^12.1.0",
     "selector-action": "^1.2.0",
-    "storybook-addon-jsx": "^7.3.10",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
+    "storybook": "start-storybook -p 9001 -c .storybook",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -61,5 +49,20 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/core": "^7.14.6",
+    "@babel/plugin-syntax-object-rest-spread": "^7.8.3",
+    "@storybook/addon-actions": "5.3.0",
+    "@storybook/addons": "5.3.0",
+    "@storybook/react": "5.3.0",
+    "aphrodite": "^2.4.0",
+    "babel-loader": "^8.2.2",
+    "json-server": "^0.16.3",
+    "node-sass": "4.14",
+    "react-with-styles-interface-aphrodite": "^6.0.1",
+    "redux-devtools-extension": "^2.13.9",
+    "sass-loader": "^12.1.0",
+    "storybook-addon-jsx": "^7.3.10"
   }
 }
