--- a/_study/FastAPI/.vscode/settings.json
+++ b/_study/FastAPI/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "python.pythonPath": ".\\venv\\Scripts\\python.exe",
+    "python.defaultInterpreterPath": ".\\venv\\Scripts\\python.exe",
     "python.terminal.activateEnvironment": true,
     "python.linting.pylintEnabled": false,
     "python.linting.flake8Enabled": true,
