--- a/react/learning-react/react-tutorial/8-color-organizer-redux/package.json
+++ b/react/learning-react/react-tutorial/8-color-organizer-redux/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "color-organizer",
-  "version": "2.0.0",
-  "description": "A sample React application",
+  "name": "color-organizer-redux",
+  "version": "3.0.0",
+  "description": "A sample Redux store with reducers and action creators",
   "main": "index.js",
   "scripts": {
     "build": "webpack --progress",
@@ -9,34 +9,28 @@
     "start": "opener http://localhost:3000 & httpster -p 3000 -d ./dist"
   },
   "keywords": [
-    "React",
-    "state",
-    "setState",
-    "explicitly",
-    "passing",
-    "props"
+    "redux",
+    "store",
+    "reducres",
+    "actions",
+    "action",
+    "creators",
+    "tutorial"
   ],
   "author": "Alex Banks <alex@moonhighway.com> (http://www.moonhighway.com)",
   "license": "MIT",
   "dependencies": {
     "httpster": "1.0.3",
-    "prop-types": "15.6.0",
-    "react": "16.0.0",
-    "react-dom": "16.0.0",
+    "redux": "3.7.2",
     "uuid": "3.1.0"
   },
   "devDependencies": {
+    "opener": "1.4.3",
     "babel-core": "6.26.0",
     "babel-loader": "7.1.2",
     "babel-preset-env": "1.6.0",
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-0": "6.24.1",
-    "css-loader": "0.28.7",
-    "node-sass": "^4.14.1",
-    "opener": "1.4.3",
-    "postcss-loader": "2.0.6",
-    "sass-loader": "^6.0.7",
-    "style-loader": "0.18.2",
     "webpack": "3.6.0"
   }
 }
