--- a/vue_js/doit_vue_js/vue-todo-app/package.json
+++ b/vue_js/doit_vue_js/vue-todo-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-todo",
+  "name": "vue-todo-app",
   "description": "A Vue.js project",
   "version": "1.0.0",
   "author": "joshua1988 <jangkeehyo@gmail.com>",
