--- a/vue_js/vue_js-master/vue-tutorial/7-todo-app/package.json
+++ b/vue_js/vue_js-master/vue-tutorial/7-todo-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "custom-block",
+  "name": "todo-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,12 +8,12 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "deepmerge": "^4.2.2",
-    "marked": "^2.1.3",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
+    "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "vue-template-compiler": "^2.6.11"
   },
