--- a/svelte/svelte_CoreAPI/Part16_Trello 클론 앱 만들기 - 예제 이해하기/svelte-trello-app/package.json
+++ b/svelte/svelte_CoreAPI/Part16_Trello 클론 앱 만들기 - 예제 이해하기/svelte-trello-app/package.json
@@ -1,12 +1,15 @@
 {
   "name": "svelte-trello-app",
   "version": "1.0.0",
-  "private": true,
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
     "start": "sirv public --no-clear"
   },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions"
+  ],
   "devDependencies": {
     "@rollup/plugin-alias": "^3.1.1",
     "@rollup/plugin-commonjs": "^15.1.0",
