--- a/svelte/svelte_CoreAPI/svelte-tutorial/svelte-simple-todo-app/package.json
+++ b/svelte/svelte_CoreAPI/svelte-tutorial/svelte-simple-todo-app/package.json
@@ -17,6 +17,7 @@
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
+    "shortid": "^2.2.16",
     "svelte": "^3.0.0",
     "svelte-preprocess": "^4.8.0"
   },
