--- a/svelte/svelte_CoreAPI/svelte-tutorial/svelte-simple-todo-app/package.json
+++ b/svelte/svelte_CoreAPI/svelte-tutorial/svelte-simple-todo-app/package.json
@@ -8,6 +8,7 @@
     "start": "sirv public --no-clear"
   },
   "devDependencies": {
+    "@rollup/plugin-alias": "^3.1.5",
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.0",
     "bootstrap": "^5.0.0-beta3",
