--- a/svelte/svelte_SPA/svelte-movie-app/package.json
+++ b/svelte/svelte_SPA/svelte-movie-app/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "snowpack build",
-    "dev": "snowpack dev"
+    "dev": "netlify dev",
+    "dev:snowpack": "snowpack dev"
   },
   "keywords": [],
   "author": "",
