--- a/svelte/svelte-learning-while-making/svelte-tutorial/svelte-todo-basic/package.json
+++ b/svelte/svelte-learning-while-making/svelte-tutorial/svelte-todo-basic/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "svelte-app",
+  "name": "svelte-todo-basic",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -15,9 +15,10 @@
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
-    "svelte": "^3.0.0"
+    "svelte": "^3.42.4"
   },
   "dependencies": {
-    "sirv-cli": "^1.0.0"
+    "sirv-cli": "^1.0.0",
+    "uuid": "^8.3.2"
   }
 }
