--- a/svelte/svelte-learning-while-making/svelte-tutorial/svelte-todo-store/package.json
+++ b/svelte/svelte-learning-while-making/svelte-tutorial/svelte-todo-store/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "svelte-app",
+  "name": "svelte-todo-store",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -10,14 +10,17 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.0",
+    "@sveltech/routify": "^1.9.10",
     "rollup": "^2.3.4",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
-    "svelte": "^3.0.0"
+    "svelte": "^3.42.4"
   },
   "dependencies": {
-    "sirv-cli": "^1.0.0"
+    "axios": "^0.21.3",
+    "sirv-cli": "^1.0.0",
+    "uuid": "^8.3.2"
   }
 }
