--- a/flask/flask-todo-app-MongoDB/.vscode/settings.json
+++ b/flask/flask-todo-app-MongoDB/.vscode/settings.json
@@ -7,6 +7,6 @@
     "python.formatting.provider": "black",
     "python.linting.flake8Args": [
         "--max-line-length=120",
-        "--ignore=E265,E302"
+        "--ignore=E265,E302,E501"
     ]
 }
