--- a/flask/doit_JumpToFlask/requirements.txt
+++ b/flask/doit_JumpToFlask/requirements.txt
@@ -5,14 +5,17 @@ dnspython==2.1.0
 email-validator==1.1.3
 flake8==3.9.2
 Flask==2.0.1
+Flask-Markdown==0.3
 Flask-Migrate==3.1.0
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==0.15.1
 greenlet==1.1.1
 idna==3.2
+importlib-resources==5.2.2
 itsdangerous==2.0.1
 Jinja2==3.0.1
 Mako==1.1.5
+Markdown==3.3.4
 MarkupSafe==2.0.1
 mccabe==0.6.1
 mypy-extensions==0.4.3
@@ -26,3 +29,4 @@ tomli==1.2.1
 typing-extensions==3.10.0.2
 Werkzeug==2.0.1
 WTForms==2.3.3
+zipp==3.5.0
