--- a/django/doit_JumpToDjango/.vscode/settings.json
+++ b/django/doit_JumpToDjango/.vscode/settings.json
@@ -1,9 +1,12 @@
 {
-    "python.defaultInterpreterPath": ".\\venv\\Scripts\\python.exe",
+    "python.defaultInterpreterPath": "./venv/bin/python.exe",
     "python.terminal.activateEnvironment": true,
     "python.linting.pylintEnabled": false,
     "python.linting.flake8Enabled": true,
     "python.linting.enabled": true,
     "python.formatting.provider": "black",
-    "python.linting.flake8Args": ["--max-line-length=88"]
+    "python.linting.flake8Args": [
+        "--max-line-length=120",
+        "--ignore=E265,E302,E501"
+    ]
 }
