--- a/react/react-blog-inflearn/package.json
+++ b/react/react-blog-inflearn/package.json
@@ -19,6 +19,7 @@
     "express": "^4.17.1",
     "helmet": "^4.6.0",
     "hpp": "^0.2.3",
+    "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "mongoose": "^6.0.9",
     "path": "^0.12.7"
