--- a/react/react-blog-inflearn/client/package.json
+++ b/react/react-blog-inflearn/client/package.json
@@ -3,26 +3,53 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/core": "^7.15.5",
+    "@fortawesome/react-fontawesome": "^0.1.15",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.22.0",
+    "babel-eslint": "^10.1.0",
+    "babel-jest": "^27.2.4",
+    "babel-loader": "^8.2.2",
+    "babel-plugin-named-asset-import": "^0.3.7",
+    "babel-plugin-transform-remove-console": "^6.9.4",
+    "babel-preset-react-app": "^10.0.0",
+    "bootstrap": "^4.6.0",
+    "camelcase": "^6.2.0",
+    "connected-react-router": "^6.9.1",
+    "dotenv": "^10.0.0",
+    "dotenv-expand": "^5.1.0",
+    "eslint": "^7.32.0",
+    "eslint-config-react-app": "^6.0.0",
+    "eslint-loader": "^4.0.2",
+    "history": "^4.10.1",
+    "jest": "^27.2.4",
+    "mini-css-extract-plugin": "^1.6.2",
+    "node-sass": "^4.14.1",
+    "optimize-css-assets-webpack-plugin": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.5",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "reactstrap": "^8.10.0",
+    "redux": "^4.1.1",
+    "redux-saga": "^1.1.3",
+    "sass-loader": "^8.0.2",
+    "web-vitals": "^1.0.1",
+    "webpack": "^4.46.0",
+    "webpack-dev-server": "^4.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "react-scripts test"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "extends": "react-app"
   },
+  "proxy": "http://localhost:8080",
   "browserslist": {
     "production": [
       ">0.2%",
@@ -33,6 +60,11 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
+    ]
+  },
+  "babel": {
+    "presets": [
+      "react-app"
     ]
   }
 }
