--- a/react/react-blog-inflearn/package.json
+++ b/react/react-blog-inflearn/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon ./server/server.js --exec babel-node",
+    "dev": "nodemon ./server/server.js --exec babel-node --ignore './client'",
     "prebuild": "cd client && npm run build",
     "build": "babel server --out-dir build",
     "build:server": "babel server --out-dir build"
