--- a/node_js/Node_Express/express-projects/meadowlark/package.json
+++ b/node_js/Node_Express/express-projects/meadowlark/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon ./index.js"
+    "start": "nodemon --exec babel-node ./index.js"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +14,10 @@
     "express-handlebars": "^5.3.4"
   },
   "devDependencies": {
+    "@babel/cli": "^7.15.7",
+    "@babel/core": "^7.15.8",
+    "@babel/node": "^7.15.8",
+    "@babel/preset-env": "^7.15.8",
     "nodemon": "^2.0.13"
   }
 }
