--- a/node_js/fullstack_js/Part02_Express_js_Guide/express-js-cli-app/package.json
+++ b/node_js/fullstack_js/Part02_Express_js_Guide/express-js-cli-app/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "express-js-cli-app2",
+  "name": "express-js-cli-app",
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon --exec babel-node ./app.js"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -13,5 +13,12 @@
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "nunjucks": "^3.2.3"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.15.7",
+    "@babel/core": "^7.15.8",
+    "@babel/node": "^7.15.8",
+    "@babel/preset-env": "^7.15.8",
+    "nodemon": "^2.0.13"
   }
 }
