--- a/node_js/fullstack_js/Part02_Express_js_Guide/34-todo-app/package.json
+++ b/node_js/fullstack_js/Part02_Express_js_Guide/34-todo-app/package.json
@@ -6,14 +6,22 @@
     "start": "nodemon --exec babel-node ./app.js"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
+    "csurf": "^1.11.0",
     "debug": "~2.6.9",
     "dotenv": "^10.0.0",
+    "errorhandler": "^1.5.1",
     "express": "~4.16.1",
     "express-handlebars": "^5.3.4",
+    "express-session": "^1.17.2",
     "http-errors": "~1.6.3",
     "less-middleware": "^2.2.1",
-    "morgan": "~1.9.1"
+    "method-override": "^3.0.0",
+    "moment": "^2.29.1",
+    "mongoskin": "^2.1.0",
+    "morgan": "~1.9.1",
+    "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.15.7",
