--- a/node_js/fullstack_js/Part02_Express_js_Guide/34-todo-app/package.json
+++ b/node_js/fullstack_js/Part02_Express_js_Guide/34-todo-app/package.json
@@ -13,8 +13,8 @@
     "dotenv": "^10.0.0",
     "errorhandler": "^1.5.1",
     "express": "~4.16.1",
-    "express-handlebars": "^5.3.4",
     "express-session": "^1.17.2",
+    "hbs": "^4.0.4",
     "http-errors": "~1.6.3",
     "less-middleware": "^2.2.1",
     "method-override": "^3.0.0",
