--- a/node_js/fullstack_js/Part02_Express_js_Guide/5-cli-app/package.json
+++ b/node_js/fullstack_js/Part02_Express_js_Guide/5-cli-app/package.json
@@ -10,7 +10,7 @@
     "debug": "~2.6.9",
     "dotenv": "^10.0.0",
     "express": "~4.16.1",
-    "express-handlebars": "^5.3.4",
+    "hbs": "^4.0.4",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1"
   },
