--- a/flask/doit_JumpToFlask/requirements.txt
+++ b/flask/doit_JumpToFlask/requirements.txt
@@ -1,6 +1,7 @@
 alembic==1.7.1
 black==21.9b0
 click==8.0.1
+colorama==0.4.4
 dnspython==2.1.0
 email-validator==1.1.3
 flake8==3.9.2
@@ -23,6 +24,7 @@ pathspec==0.9.0
 platformdirs==2.3.0
 pycodestyle==2.7.0
 pyflakes==2.3.1
+python-dotenv==0.19.2
 regex==2021.8.28
 SQLAlchemy==1.4.23
 tomli==1.2.1
