--- a/flask/first_flask/requirements.txt
+++ b/flask/first_flask/requirements.txt
@@ -1,11 +1,47 @@
-flask==1.1.2
-Flask-Script==2.0.6
+alembic==1.7.1
+attrs==21.2.0
+black==21.8b0
+certifi==2021.5.30
+chardet==4.0.0
+click==8.0.1
+colorama==0.4.4
+flake8==3.9.2
+flasgger==0.9.5
+Flask==2.0.2
+Flask-Login==0.5.0
 Flask-Migrate==2.7.0
+Flask-Script==2.0.6
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==0.14.3
-Flask-Login==0.5.0
+greenlet==1.1.1
+idna==2.10
+importlib-resources==5.2.2
+itsdangerous==2.0.1
+Jinja2==3.0.1
+jsonschema==3.2.0
+linecache2==1.0.0
+Mako==1.1.5
+MarkupSafe==2.0.1
+mccabe==0.6.1
+mistune==0.8.4
+mypy-extensions==0.4.3
 mysqlclient==2.0.3
+pathspec==0.9.0
+platformdirs==2.3.0
+pycodestyle==2.7.0
+pyflakes==2.3.1
+pyrsistent==0.18.0
+PyYAML==5.4.1
 redis==2.10.6
-unittest2==1.1.0
+regex==2021.8.28
 requests==2.25.1
-flasgger==0.9.5
+six==1.16.0
+SQLAlchemy==1.4.23
+tomli==1.2.1
+traceback2==1.4.0
+typing-extensions==3.10.0.2
+unittest2==1.1.0
+urllib3==1.26.6
+Werkzeug==2.0.1
+WTForms==2.3.3
+zipp==3.5.0
