--- a/django/django-instagram-clone_kindfamily/.vscode/settings.json
+++ b/django/django-instagram-clone_kindfamily/.vscode/settings.json
@@ -8,5 +8,6 @@
     "python.linting.flake8Args": [
         "--max-line-length=120",
         "--ignore=E265,E302,E501"
-    ]
+    ],
+    "liveServer.settings.port": 5501
 }
