폴더 구조 변경

--- a/flask/flask-firebase-blog/blog/auth/firebaseAuth.json
+++ b/flask/flask-firebase-blog/blog/auth/firebaseAuth.json
@@ -1,6 +1,7 @@
 {
     "apiKey": "AIzaSyAN7MTGylrRcUYbHb50CmzP26gsgFYZgUs",
     "authDomain": "flask-firebase-blog-3c7bd.firebaseapp.com",
+    "databaseURL": "https://flask-firebase-blog-3c7bd-default-rtdb.asia-southeast1.firebasedatabase.app",
     "projectId": "flask-firebase-blog-3c7bd",
     "storageBucket": "flask-firebase-blog-3c7bd.appspot.com",
     "messagingSenderId": "740055281415",
