--- a/django/django-instagram-clone_kindfamily/.vscode/settings.json
+++ b/django/django-instagram-clone_kindfamily/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "python.defaultInterpreterPath": "~\\.conda\\envs\\venv\\python.exe",
+    "python.defaultInterpreterPath": "~\\.conda\\envs\\venv_django\\python.exe",
     "python.terminal.activateEnvironment": true,
     "python.linting.pylintEnabled": false,
     "python.linting.flake8Enabled": true,
