--- a/flask/python_backend/.vscode/settings.json
+++ b/flask/python_backend/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "python.defaultInterpreterPath": "~\\.conda\\envs\\venv\\python.exe",
+    "python.defaultInterpreterPath": "~\\.conda\\envs\\venv_flask\\python.exe",
     "python.terminal.activateEnvironment": true,
     "python.linting.pylintEnabled": false,
     "python.linting.flake8Enabled": true,
