--- a/django/django-pinterest-inflearn/.vscode/settings.json
+++ b/django/django-pinterest-inflearn/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
+    "terminal.integrated.cwd": ".\\pinterest-clone",
     "python.defaultInterpreterPath": "~\\.conda\\envs\\venv_django\\python.exe",
     "python.terminal.activateEnvironment": true,
     "python.linting.pylintEnabled": false,
