--- a/django/django-pinterest-inflearn/.vscode/settings.json
+++ b/django/django-pinterest-inflearn/.vscode/settings.json
@@ -8,7 +8,7 @@
     "python.formatting.provider": "black",
     "python.linting.flake8Args": [
         "--max-line-length=120",
-        "--ignore=E265,E302,E501"
+        "--ignore=E265,E302,E501,F401"
     ],
     "liveServer.settings.port": 5501
 }
