--- a/django/django-instagram-clone_kindfamily/.vscode/settings.json
+++ b/django/django-instagram-clone_kindfamily/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
+    "terminal.integrated.cwd": ".\\instaclone-backend",
     "python.defaultInterpreterPath": "~\\.conda\\envs\\venv_django\\python.exe",
     "python.terminal.activateEnvironment": true,
     "python.linting.pylintEnabled": false,
@@ -7,7 +8,7 @@
     "python.formatting.provider": "black",
     "python.linting.flake8Args": [
         "--max-line-length=120",
-        "--ignore=E265,E302,E501"
+        "--ignore=E265,E302,E402,E501,F401"
     ],
     "liveServer.settings.port": 5501
 }
