--- a/django/requirements.txt
+++ b/django/requirements.txt
@@ -1,21 +1,42 @@
 asgiref==3.4.1
 black==21.12b0
 certifi==2021.10.8
+cffi==1.15.0
+chardet==4.0.0
+charset-normalizer==2.0.9
 click==8.0.3
 colorama==0.4.4
+cryptography==36.0.1
+defusedxml==0.7.1
 Django==3.2.10
+django-allauth==0.47.0
+django-appconf==1.0.5
+django-debug-toolbar==3.2.4
+django-environ==0.8.1
+django-imagekit==4.1.0
 dnspython==2.1.0
 flake8==4.0.1
+idna==3.3
 mccabe==0.6.1
 mypy-extensions==0.4.3
+oauthlib==3.1.1
 pathspec==0.9.0
+pilkit==2.0
+Pillow==8.4.0
 platformdirs==2.4.0
+psycopg2-binary==2.9.2
 pycodestyle==2.8.0
+pycparser==2.21
 pyflakes==2.4.0
+PyJWT==2.3.0
 pymongo==3.12.0
-python-dotenv==0.19.2
+python3-openid==3.2.0
 pytz==2021.3
+requests==2.26.0
+requests-oauthlib==1.3.0
+six==1.16.0
 sqlparse==0.4.2
 tomli==1.2.3
 typing_extensions==4.0.1
+urllib3==1.26.7
 wincertstore==0.2
