--- a/django/doit_JumpToDjango/.vscode/settings.json
+++ b/django/doit_JumpToDjango/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
+    "terminal.integrated.cwd": ".\\django-tutorial\\mysite",
     "python.defaultInterpreterPath": ".\\venv\\Scripts\\python.exe",
     "python.terminal.activateEnvironment": true,
     "python.linting.pylintEnabled": false,
