--- a/react/react-toy-project-inflearn/server/package.json
+++ b/react/react-toy-project-inflearn/server/package.json
@@ -5,8 +5,10 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "cors": "^2.8.5",
+    "apollo-server": "^3.0.1",
+    "apollo-server-express": "^3.0.1",
     "express": "^4.17.1",
+    "graphql": "^15.5.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
