--- a/react/react-toy-project-inflearn/client/package.json
+++ b/react/react-toy-project-inflearn/client/package.json
@@ -5,9 +5,13 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.21.1",
+    "graphql": "^15.5.0",
+    "graphql-request": "^3.4.0",
+    "graphql-tag": "^2.12.4",
     "next": "^11.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-query": "^3.17.2",
     "sass": "^1.35.2"
   },
   "devDependencies": {
