--- a/node_js/codefirst_node_js/package.json
+++ b/node_js/codefirst_node_js/package.json
@@ -13,9 +13,11 @@
   "dependencies": {
     "axios": "^0.24.0",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "express-session": "^1.17.2",
     "morgan": "^1.10.0",
+    "redis": "^4.0.1",
     "request": "^2.88.2"
   },
   "devDependencies": {
