--- a/node_js/codefirst_node_js/package.json
+++ b/node_js/codefirst_node_js/package.json
@@ -13,12 +13,14 @@
   "dependencies": {
     "axios": "^0.24.0",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "express-session": "^1.17.2",
     "morgan": "^1.10.0",
     "redis": "^3.1.2",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "uuid-apikey": "^1.5.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
