--- a/node_js/codefirst_node_js/package.json
+++ b/node_js/codefirst_node_js/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "express-session": "^1.17.2",
+    "mongoose": "^5.13.14",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
     "redis": "^3.1.2",
