--- a/node_js/codefirst_node_js/package.json
+++ b/node_js/codefirst_node_js/package.json
@@ -25,7 +25,9 @@
     "request": "^2.88.2",
     "sequelize": "^6.12.4",
     "sequelize-cli": "^6.3.0",
-    "uuid-apikey": "^1.5.3"
+    "socket.io": "^4.4.0",
+    "uuid-apikey": "^1.5.3",
+    "ws": "^8.4.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
