study node.js 2021-12-31

--- a/node_js/codefirst_node_js/package.json
+++ b/node_js/codefirst_node_js/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon ./index.js"
+    "start": "nodemon ./facebook-clone/app.js"
   },
   "keywords": [],
   "author": "",
@@ -16,8 +16,10 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.2",
     "express-session": "^1.17.2",
+    "hbs": "^4.2.0",
     "mongoose": "^5.13.14",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
