--- a/node_js/get_programming_with_node_js/package.json
+++ b/node_js/get_programming_with_node_js/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon ./index.js"
+    "start": "nodemon ./lecture/index.js"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "express": "^4.17.2",
+    "hbs": "^4.2.0",
     "http-status-codes": "^2.2.0"
   }
 }
