--- a/react/doit_twitterclone/react-twitter-clone/package.json
+++ b/react/doit_twitterclone/react-twitter-clone/package.json
@@ -9,6 +9,7 @@
     "firebase": "^8.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.1",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.3"
   },
@@ -18,9 +19,13 @@
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+      "react-app"
+    ],
+    "rules": {
+      "import/no-anonymous-default-export": 0,
+      "no-undef": 0,
+      "no-unused-vars": 0
+    }
   },
   "browserslist": {
     "production": [
