--- a/_study/gatsby-blog-inflearn/package.json
+++ b/_study/gatsby-blog-inflearn/package.json
@@ -5,7 +5,10 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
     "gatsby": "^3.13.1",
+    "gatsby-plugin-emotion": "^7.5.0",
     "gatsby-plugin-image": "^1.13.0",
     "gatsby-plugin-offline": "^4.13.0",
     "gatsby-plugin-react-helmet": "^4.13.0",
