--- a/_study/gatsby-blog-inflearn/package.json
+++ b/_study/gatsby-blog-inflearn/package.json
@@ -14,8 +14,15 @@
     "gatsby-plugin-react-helmet": "^4.13.0",
     "gatsby-plugin-sharp": "^3.13.0",
     "gatsby-plugin-typescript": "^3.14.0",
+    "gatsby-remark-copy-linked-files": "^5.5.0",
+    "gatsby-remark-external-links": "^0.0.4",
+    "gatsby-remark-images": "^6.5.2",
+    "gatsby-remark-prismjs": "^6.5.0",
+    "gatsby-remark-smartypants": "^5.5.0",
     "gatsby-source-filesystem": "^3.13.0",
+    "gatsby-transformer-remark": "^5.5.2",
     "gatsby-transformer-sharp": "^3.13.0",
+    "prismjs": "^1.26.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
