--- a/node_js/nestjs_backend_inflearn/Part02_NestJS를 위한 express 핵심 원리/1-express+ts 개발 환경 설정/package.json
+++ b/node_js/nestjs_backend_inflearn/Part02_NestJS를 위한 express 핵심 원리/1-express+ts 개발 환경 설정/package.json
@@ -1,4 +1,9 @@
 {
+  "name": "typescript-node-boilerplate",
+  "version": "1.0.0",
+  "description": "⚡️ minimal boilerplate based on typescript with node ⚡️",
+  "main": "index.js",
+  "license": "ISC",
   "scripts": {
     "build": "tsc",
     "dev": "tsc-watch --onSuccess \"node dist/app.js\"",
