--- a/vue_js/vue3_book/.prettierrc
+++ b/vue_js/vue3_book/.prettierrc
@@ -2,7 +2,7 @@
   "useTabs": false,
   "printWidth": 80,
   "tabWidth": 2,
-  "trailingComma": "none",
+  "trailingComma": "all",
   "semi": true,
   "singleQuote": true,
   "bracketSpacing": true
