--- a/_study/gatsby-blog-inflearn/.prettierrc
+++ b/_study/gatsby-blog-inflearn/.prettierrc
@@ -7,6 +7,6 @@
   "quoteProps": "as-needed",
   "trailingComma": "all",
   "bracketSpacing": true,
-  "arrowParens": "avoid",
+  "arrowParens": "always",
   "endOfLine": "lf"
 }
