--- a/node_js/js_everywhere/.prettierrc
+++ b/node_js/js_everywhere/.prettierrc
@@ -4,5 +4,6 @@
   "tabWidth": 2,
   "trailingComma": "all",
   "semi": true,
-  "singleQuote": true
+  "singleQuote": true,
+  "arrowParens": "always"
 }
