--- a/react/react-redux/study-react-redux/7-todo-app-redux-middleware/package.json
+++ b/react/react-redux/study-react-redux/7-todo-app-redux-middleware/package.json
@@ -1,17 +1,13 @@
 {
-  "name": "todo-app-redux",
+  "name": "todo-app-redux-middleware",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-redux": "^7.2.6",
-    "react-scripts": "5.0.0",
-    "redux": "^4.1.2",
-    "web-vitals": "^2.1.4"
+    "react-scripts": "^3.4.4",
+    "redux": "^4.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -21,8 +17,7 @@
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "react-app"
     ]
   },
   "browserslist": {
