--- a/react/react-redux/study-react-redux/9-2-todo-app-animation/package.json
+++ b/react/react-redux/study-react-redux/9-2-todo-app-animation/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^3.0.3",
     "react": "^16.14.0",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^16.14.0",
     "react-redux": "^7.2.6",
     "react-scripts": "^3.4.4",
