--- a/react/learning-react/react-tutorial/10-color-organizer-router/package.json
+++ b/react/learning-react/react-tutorial/10-color-organizer-router/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "color-organizer-redux",
-  "version": "4.0.0",
+  "name": "color-organizer-router",
+  "version": "6.0.0",
   "description": "A sample React application",
   "main": "index.js",
   "scripts": {
@@ -25,6 +25,7 @@
     "react-dom": "16.0.0",
     "react-icons": "2.2.7",
     "react-redux": "5.0.6",
+    "react-router-dom": "4.2.2",
     "redux": "3.7.2",
     "uuid": "3.1.0"
   },
@@ -37,9 +38,11 @@
     "css-loader": "0.28.7",
     "node-sass": "4.14.0",
     "opener": "1.4.3",
+    "optimize-css-assets-webpack-plugin": "3.2.0",
     "postcss-loader": "2.0.6",
     "sass-loader": "6.0.6",
     "style-loader": "0.18.2",
-    "webpack": "3.6.0"
+    "webpack": "3.6.0",
+    "webpack-dev-server": "2.7.1"
   }
 }
