--- a/react/learning-react/react-tutorial/6-color-organizer/package.json
+++ b/react/learning-react/react-tutorial/6-color-organizer/package.json
@@ -35,7 +35,7 @@
     "node-sass": "^4.14.1",
     "opener": "1.4.3",
     "postcss-loader": "2.0.6",
-    "sass-loader": "^6.0.7",
+    "sass-loader": "6.0.7",
     "style-loader": "0.18.2",
     "webpack": "3.6.0"
   }
