--- a/react/learning-react/react-tutorial/7-color-organizer/package.json
+++ b/react/learning-react/react-tutorial/7-color-organizer/package.json
@@ -32,10 +32,10 @@
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-0": "6.24.1",
     "css-loader": "0.28.7",
-    "node-sass": "^4.14.1",
+    "node-sass": "4.14.1",
     "opener": "1.4.3",
     "postcss-loader": "2.0.6",
-    "sass-loader": "^6.0.7",
+    "sass-loader": "6.0.7",
     "style-loader": "0.18.2",
     "webpack": "3.6.0"
   }
