--- a/django/django-rest-framework/.vscode/settings.json
+++ b/django/django-rest-framework/.vscode/settings.json
@@ -9,5 +9,6 @@
     "python.linting.flake8Args": [
         "--max-line-length=120",
         "--ignore=E265,E302,E402,E501,F401"
-    ]
+    ],
+    "python.pythonPath": "~\\.conda\\envs\\venv_django\\python.exe"
 }
