--- a/django/django-instagram-clone_kindfamily/.vscode/settings.json
+++ b/django/django-instagram-clone_kindfamily/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "terminal.integrated.cwd": ".\\instaclone-backend",
-    "python.defaultInterpreterPath": "~\\.conda\\envs\\venv_django\\python.exe",
+    "python.defaultInterpreterPath": "~\\anaconda3\\envs\\venv_django\\python.exe",
     "python.terminal.activateEnvironment": true,
     "python.linting.pylintEnabled": false,
     "python.linting.flake8Enabled": true,
