--- a/django/django-rest-framework/.vscode/settings.json
+++ b/django/django-rest-framework/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "terminal.integrated.cwd": ".\\ch6_board",
-    "python.pythonPath": "~\\.conda\\envs\\venv_django\\python.exe",
+    "python.pythonPath": "~\\anaconda3\\envs\\venv_django\\python.exe",
     "python.terminal.activateEnvironment": true,
     "python.linting.pylintEnabled": false,
     "python.linting.flake8Enabled": true,
