--- a/django/requirements.txt
+++ b/django/requirements.txt
@@ -11,9 +11,12 @@ defusedxml==0.7.1
 Django==3.2.10
 django-allauth==0.47.0
 django-appconf==1.0.5
+django-cors-headers==3.13.0
 django-debug-toolbar==3.2.4
 django-environ==0.8.1
+django-filter==22.1
 django-imagekit==4.1.0
+djangorestframework==3.13.1
 dnspython==2.1.0
 flake8==4.0.1
 idna==3.3
@@ -30,6 +33,7 @@ pycparser==2.21
 pyflakes==2.4.0
 PyJWT==2.3.0
 pymongo==3.12.0
+python-dotenv==0.20.0
 python3-openid==3.2.0
 pytz==2021.3
 requests==2.26.0
