--- a/vue_js/vue3_book/.vscode/settings.json
+++ b/vue_js/vue3_book/.vscode/settings.json
@@ -7,4 +7,11 @@
         "editor.formatOnType": true,
         "editor.suggestSelection": "recentlyUsed"
     },
+    "[vue]": {
+        "editor.tabSize": 2,
+        "editor.defaultFormatter": "esbenp.prettier-vscode",
+        "editor.formatOnSave": true,
+        "editor.formatOnType": true,
+        "editor.suggestSelection": "recentlyUsed"
+    },
 }
